--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,5 @@ lib_deps =
 	esphome/AsyncTCP-esphome@^2.1.4
 	adafruit/Adafruit MAX31855 library@^1.4.2  
     Links2004/WebSockets@^2.3.6
+	bblanchon/ArduinoJson@^7.0.4
+
